fix overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,6 +94,8 @@ header {
 aside {
     width: 20vw;
     position: fixed;
+    max-height: 100vh;
+    overflow-y: auto;
 }
 
 main {
